--- a/Lektion_1/Calculator/Calculator/Calculator.csproj
+++ b/Lektion_1/Calculator/Calculator/Calculator.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.62" />
+  </ItemGroup>
+
 </Project>
