--- a/Lektion_1/Calculator/Calculator.Test.Unit/Calculator.Test.Unit.csproj
+++ b/Lektion_1/Calculator/Calculator.Test.Unit/Calculator.Test.Unit.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-alpha.1" />
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.62" />
   </ItemGroup>
 
