--- a/Lektion_1/Calculator/Calculator/Calculator.csproj
+++ b/Lektion_1/Calculator/Calculator/Calculator.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-alpha.1" />
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.62" />
   </ItemGroup>
 
